# NASA-Land-Coupler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  configure.sh  env.cheyenne.intel17  env.discover.intel14  setuprun.sh
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  help-request.md
analysis/: COMPARE_LISHYDRO_NETCDF.sh  COMPARE_NLC_NETCDF.sh  FERRET_HYDRO_CHRTOUT.jnl  FERRET_HYDRO_RST_IGNORE0.jnl  FERRET_LIS_HIST.jnl  FERRET_LIS_RST_NOAH33_IGNORE0.jnl  GENERATE_LISHYDRO_PLOTS.sh  GENERATE_NLC_PLOTS.sh  README.md
app/: Makefile  app.F90  driver.F90  lishydro.runconfig
cmake/modules/: FindLISDEPS.cmake
compset/: lishydro.runconfig.frontrange.ldas  lishydro.runconfig.irene.nldas2  run.csh  run.csh.cheyenne  run.csh.discover  settings.coupled_irene_noMed.noah.nldas2  settings.frontrange.ldas  settings.irene.nldas2  setuprun.csh
compset/runconfig/: lishydro.runconfig.hyd  lishydro.runconfig.hyd.ens002  lishydro.runconfig.lnd  lishydro.runconfig.lndhyd  lishydro.runconfig.lndhydmed  lishydro.runconfig.lndhydmed.ens002  lishydro.runconfig.lndhydmed.ens020
compset/runscripts/: run.csh.cheyenne  run.csh.discover  run.csh.discover.19
compset/runsettings/: coupled_irene.noah.nldas2  coupled_irene.noahmp.nldas2  coupled_irene_noMed.noah.nldas2  coupled_tar.noahmp_v4.0.1_cold.nldas2  coupled_tuolumne.ens002.noahmp.nldas2  coupled_tuolumne.ens020.noahmp_v4.0.1_da.nldas2  coupled_tuolumne.noah.nldas2  coupled_tuolumne.noahmp_v4.0.1_cold.nldas2  coupled_tuolumne.noahmp_v4.0.1_da.nldas2  coupled_tuolumne_noMed.noah.nldas2  sbys_tuolumne_hyd.ens002.ldas  stdalone_frontrange_hyd.ldas  stdalone_irene_lnd.nldas2  stdalone_tuolumne_hyd.ldas
env/: _template_  cheyenne.gnu.9.1.0  cheyenne.intel.17.0.1  cheyenne.intel.19.1.1  discover.gnu.9.3.0  discover.intel.14.0.3  discover.intel.19.1.0  discover.intel.19.1.3  discover.intel.20.0.0
modules/: build.cheyenne.intel17  build.discover.intel14  build.discover.intel19  build.discover.intel19update  modules.cheyenne.intel17  modules.discover.intel14  modules.discover.intel19  modules.discover.intel19update
run/: run.csh
scripts/: build_lis_libraries.sh
src/archive/: README.md  configure.lis.cheyenne  configure.lis.discover
src/driver/: .gitignore  Makefile  app.F90  driver.F90  fields.F90  lishydro.runconfig  mediator.F90  settings.h
templates/runconfig/: lishydro.runconfig.hyd  nlc.runconfig.hyd  nlc.runconfig.hyd.ens002  nlc.runconfig.lnd  nlc.runconfig.lndhyd  nlc.runconfig.lndhydmed  nlc.runconfig.lndhydmed.ens002  nlc.runconfig.lndhydmed.ens020
templates/runscripts/: run.cheyenne.gnu.9.1.0  run.cheyenne.intel.17.0.1  run.cheyenne.intel.19.1.1  run.discover.intel.14.0.3  run.discover.intel.19.1.0  run.discover.intel.19.1.3  run.discover.intel.20.0.0
usecases/: coupled_irene.noah.nldas2  coupled_irene_noMed.noah.nldas2  coupled_tar.noahmp_v4.0.1_cold.nldas2  coupled_tuolumne.ens002.noahmp.nldas2  coupled_tuolumne.ens020.noahmp_v4.0.1_da.nldas2  coupled_tuolumne.noah.nldas2  stdalone_frontrange_hyd.ldas  stdalone_irene_lnd.nldas2  stdalone_tuolumne_hyd.ldas
usecases/runconfig/: lishydro.runconfig.hyd.ens002  lishydro.runconfig.lndhydmed  lishydro.runconfig.lndhydmed.ens002
usecases/runscripts/: run.cheyenne.intel.17.0.1  run.discover.intel.14.0.3  run.discover.intel.19.1.0
usecases/runsettings/: coupled_tuolumne.noahmp_v4.0.1_da.nldas2  coupled_tuolumne_noMed.noah.nldas2  sbys_tuolumne_hyd.ens002.ldas
